sol/2018-pu-f1-ilhas.txt
Ilhas
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2018f1ps_ilhas.cpp: In function ‘int main()’:
2018f1ps_ilhas.cpp:42:24: error: ‘INT_MAX’ was not declared in this scope
   42 |     dist.resize(N + 1, INT_MAX);
      |                        ^~~~~~~
2018f1ps_ilhas.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <queue>
  +++ |+#include <climits>
    4 | using namespace std;